URLParser: Fix relative URLs containing only fragments https://bugs.webkit.org/show_bug.cgi?id=161882

Reviewed by Brady Eidson.

Source/WebCore:

Covered by new API tests.

* platform/URLParser.cpp:
(WebCore::URLParser::parse):

Tools:

* TestWebKitAPI/Tests/WebCore/URLParser.cpp:
(TestWebKitAPI::TEST_F):



Canonical link: https://commits.webkit.org/180038@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@205835 268f45cc-cd09-0410-ab3c-d52691b4dbfc